--- a/index.html
+++ b/index.html
@@ -293,6 +293,16 @@
     .contact-lines a:hover { text-decoration: underline; }
     .stats-grid { display: grid; grid-template-columns: repeat(auto-fit, minmax(140px, 1fr)); gap: 10px; margin-top: 14px; }
     .divider { height: 1px; background: var(--stroke); margin: 12px 0; border: none; }
+    .mini-grid { display: grid; gap: 10px; margin-top: 10px; }
+    .mini-card {
+      border: 1px solid var(--stroke);
+      border-radius: var(--radius);
+      padding: 12px;
+      background: linear-gradient(145deg, rgba(255,255,255,0.05), rgba(120,186,255,0.04));
+      box-shadow: inset 0 1px 0 rgba(255,255,255,0.04), var(--shadow);
+    }
+    .mini-card strong { display: block; margin-bottom: 4px; }
+    .mini-card span { color: var(--muted); font-size: 13px; }
     @media (max-width: 980px) {
       .layout { grid-template-columns: 1fr; }
       .sidebar { position: static; }
@@ -376,11 +386,15 @@
         <a class="btn btn-primary" href="mailto:asad.armada@gmail.com">Email</a>
         <a class="btn btn-ghost" href="tel:+8801821213778">Call</a>
       </div>
-      <hr class="divider">
-        <div class="stats-grid">
-          <div class="stat"><strong>3.77 CGPA</strong><span>BSc in CSE, 2025 · Uttara University</span></div>
-          <div class="stat"><strong>3.54 CGPA</strong><span>Diploma in Computer Technology, 2020</span></div>
-          <div class="stat"><strong>Present</strong><span>Junior Executive, ARMADA</span></div>
+      <div class="mini-grid">
+        <div class="mini-card">
+          <strong>Available for</strong>
+          <span>Web administration, marketplace ops, and customer support engagements.</span>
+        </div>
+        <div class="mini-card">
+          <strong>Toolkit</strong>
+          <span>Admin panels, HTML/CSS tweaks, listing optimization, and issue triage.</span>
+        </div>
       </div>
     </aside>
 
