--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
     main {
       max-width: 1200px;
       margin: 0 auto;
-      padding: 24px 22px 64px;
+      padding: 16px 14px 12px;
       position: relative;
       z-index: 1;
     }
@@ -260,7 +260,7 @@
       pointer-events: none;
     }
     footer {
-      padding: 18px 0 36px;
+      padding: 10px 0 10px;
       color: var(--muted);
       font-size: 14px;
       text-align: center;
@@ -306,7 +306,7 @@
     @media (max-width: 980px) {
       .layout { grid-template-columns: 1fr; }
       .sidebar { position: static; }
-      main { padding: 20px 18px 56px; }
+      main { padding: 14px 12px 10px; }
       nav { padding: 12px 16px; }
       .section-title { font-size: 20px; }
       .card, .stat { padding: 16px; }
@@ -331,6 +331,8 @@
       .education-grid { grid-template-columns: 1fr; }
       .portrait { width: 160px; height: 160px; margin-top: 10px; }
       .name { font-size: 22px; }
+      main { padding: 10px 10px 8px; }
+      .content { gap: 12px; }
     }
     @keyframes fadeUp { from { opacity: 0; transform: translateY(20px); } to { opacity: 1; transform: translateY(0); } }
     section { animation: fadeUp 0.6s ease forwards; opacity: 0; }
@@ -479,7 +481,18 @@
     <script>
       const toggle = document.querySelector(".menu-toggle");
       const header = document.querySelector("header");
-      toggle?.addEventListener("click", () => header.classList.toggle("nav-open"));
+      const navLinks = document.querySelector(".nav-links");
+
+      function closeNav() { header.classList.remove("nav-open"); }
+      function toggleNav(e) {
+        e.stopPropagation();
+        header.classList.toggle("nav-open");
+      }
+      toggle?.addEventListener("click", toggleNav);
+      navLinks?.addEventListener("click", closeNav);
+      document.addEventListener("click", (e) => {
+        if (!header.contains(e.target)) closeNav();
+      });
     </script>
     <script>
       const { useEffect, useState } = React;
